After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687872 - Segfault when attempting to get character extents for GtkTextCellAccessible objects
Segfault when attempting to get character extents for GtkTextCellAccessible o...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
3.6.x
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-11-07 18:18 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2012-11-07 20:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test script (1.45 KB, text/plain)
2012-11-07 18:18 UTC, Joanmarie Diggs (IRC: joanie)
Details

Description Joanmarie Diggs (IRC: joanie) 2012-11-07 18:18:09 UTC
Created attachment 228405 [details]
test script

Steps to reproduce:
1. Launch gtk3-demo
2. Launch the attached test script in a terminal

Expected results: gtk3-demo would not segfault
Actual results: gtk3-demo segfaults (for me, 100% of the time)

  • #0 pango_attr_list_copy
    at pango-attributes.c line 1206
  • #1 create_pango_layout
    at gtktextcellaccessible.c line 427
  • #2 gtk_text_cell_accessible_get_character_extents
    at gtktextcellaccessible.c line 581
  • #3 atk_text_get_character_extents
    at atktext.c line 630
  • #4 atk_text_real_get_range_extents
    at atktext.c line 1296
  • #5 impl_GetRangeExtents
    at text-adaptor.c line 621
  • #6 handle_other
    at droute.c line 537
  • #7 handle_message
    at droute.c line 584
  • #8 _dbus_object_tree_dispatch_and_unlock
    at dbus-object-tree.c line 862
  • #9 dbus_connection_dispatch
    at dbus-connection.c line 4672
  • #10 message_queue_dispatch
    at atspi-gmain.c line 97
  • #11 g_main_dispatch
    at gmain.c line 2715
  • #12 g_main_context_dispatch
    at gmain.c line 3219
  • #13 g_main_context_iterate
    at gmain.c line 3290
  • #14 g_main_loop_run
    at gmain.c line 3484
  • #15 gtk_main
    at gtkmain.c line 1160
  • #16 main
    at main.c line 1068

Comment 1 Cosimo Cecchi 2012-11-07 20:48:30 UTC
Thanks for the report, this was caused by a double unref of a GtkCellRenderer.
I now pushed a fix to git master and gtk-3-6.